--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Yu-Gi-Oh! Timeline</title>
-    <link rel="stylesheet" href="/output.c16d2514.css">
+    <link rel="stylesheet" href="output.c16d2514.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Trade+Winds" rel="stylesheet">
-  <script src="/output.c16d2514.js"></script></head>
+  <script src="output.c16d2514.js"></script></head>
   <body>
     <div id="main">
       <div id="logo">
-        <img src="/Yu-Gi-OhLogo.3acaf1cc.png">
+        <img src="Yu-Gi-OhLogo.3acaf1cc.png">
         <h1>TIMELINE!</h1>
       </div>
 
@@ -45,7 +45,7 @@
         <div class="season" id="season1" data-seasonDiv="1">
           <h1 class="seasonTooltip">SEASON 1</h1>
           <div class="returnButton" data-seasonDiv="returnButto1">
-            <img src="/arrow.a57d9086.png">
+            <img src="arrow.a57d9086.png">
             <h2 class="returnButtonText">Return to frontpage</h2>
           </div>
           <svg id="svg1">
@@ -70,7 +70,7 @@
         <div class="season" id="season2" data-seasonDiv="2">
           <h1 class="seasonTooltip">SEASON 2</h1>
           <div class="returnButton" data-seasonDiv="returnButton2">
-            <img src="/arrow.a57d9086.png">
+            <img src="arrow.a57d9086.png">
             <h2 class="returnButtonText">Return to frontpage</h2>
           </div>
           <svg id="svg2">
@@ -95,7 +95,7 @@
         <div class="season" id="season3" data-seasonDiv="3">
           <h1 class="seasonTooltip">SEASON 3</h1>
           <div class="returnButton" data-seasonDiv="returnButton3">
-            <img src="/arrow.a57d9086.png">
+            <img src="arrow.a57d9086.png">
             <h2 class="returnButtonText">Return to frontpage</h2>
           </div>
           <svg id="svg3">
@@ -120,7 +120,7 @@
         <div class="season" id="season4" data-seasonDiv="4">
           <h1 class="seasonTooltip">SEASON 4</h1>
           <div class="returnButton" data-seasonDiv="returnButton4">
-            <img src="/arrow.a57d9086.png">
+            <img src="arrow.a57d9086.png">
             <h2 class="returnButtonText">Return to frontpage</h2>
           </div>
           <svg id="svg4">
@@ -145,7 +145,7 @@
         <div class="season" id="season5" data-seasonDiv="5">
           <h1 class="seasonTooltip">SEASON 5</h1>
           <div class="returnButton" data-seasonDiv="returnButton5">
-            <img src="/arrow.a57d9086.png">
+            <img src="arrow.a57d9086.png">
             <h2 class="returnButtonText">Return to frontpage</h2>
           </div>
           <svg id="svg5">
@@ -170,5 +170,5 @@
       </div>
     </div>
   </body>
-  <script src="/Timeline Projekt.e31bb0bc.js"></script>
+  <script src="Timeline Projekt.e31bb0bc.js"></script>
 </html>
